--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,23 @@
 
 /**DECORAÇÃO DA BARRA DE MENU**/
 
- 
+
 .navbar{
     background-color: #862F35;
     margin-top: 20px;
-    margin-left: 10px;
-    margin-right: px;
+    margin-left: 28px;
+    margin-right: 28px;
     border-radius: 16px;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.774); /**Tras sombra ao navbar**/
-    padding: o.5rem;
-    height: 80px;
+    padding: 18px;
     transition: all 0.4s ease; /* transição suave */
+}
+
+/**bloco para ajudar a centralizar o navbar**/
+.bloco_central{
+    height: 3px;
+    padding: 20px 110px;
+    background-color: transparent;
 }
 
 /**DECORAÇÃO BOTÃO LOGIN**/
@@ -29,68 +35,13 @@
     padding: 10px 30px;
     border-radius: 10px;
     text-decoration: none;
-    transition: 0.3s;
-    margin-right: 50px;
+    transition: 0.5s ease-in-out;
+
 }
 
 .botaologin:hover{
-
     background-color: #491d20;
 }
-
-/**DECORAÇÃO QUEBRA DE MENU**/
-
-
-.navbar-toggler{
-    color: #fff;
-    border: none;
-    font-size: 1.25rem;
-}
-
-.nomemenu{
-    color: #ffffff;
-}
-
-
-/**DECORAÇÃO QUEBRA DE MENU COM O MOUSE EM CIMA**/
-
-.navbar-toggler:focus, .btn-close:focus{
-    box-shadow: none;
-    outline: none;
-
-}
-
-.btn-close{
-    color: #fff;
-}
-
-.offcanvas-header{
-    background-color: #862F35;
-}
-
-.offcanvas-body{
-    background-color: #862F35;
-}
-
-
-/**Distanciar os links**/
-.menu_central{
-    margin-left: 275px;
-}
-
-/**Distanciar letras no navbar**/
-.letras{ 
-    margin-right: 10px;
-}
-
-/**Distanciar cores no navbar**/
-.cor_alternado{
-    margin-right: 70px;
-}
-
-
-
-/**DECORAÇÃO DOS LINKS DA NAVBAR**/
 
 /**CORES E TAMANHO OS BOTOTES DO MENU**/
 
@@ -106,10 +57,9 @@
     color: #ffffff;
 }
 
-
 /**DECORAÇÃO DO UNDERLINE DOS LINKS DO MENU**/
 
-@media (min-width: 991px) {
+@media (min-width: 985px) {
     
 
 
@@ -139,19 +89,19 @@
 
 }
 /* media screen para modo celular e tablet com menu hamburguer*/
-@media (min-width: 360px) and (max-width: 985px) {
+@media (min-width: 300px) and (max-width: 991px) {
 
-
+    .navbar-toggler{
+        margin-bottom: 0px;
+    }
+    
 
     .navbar-toggler-icon{
 
         margin-bottom: 0px;
     }
 
-    .botaologin{
-        margin-left: 0px;
-        
-    }
+
     .faleconosco{
         margin-bottom: 0px;
 
@@ -164,8 +114,8 @@
     }
 
     .btn-container{
-        margin-left: 27px;
-        margin-bottom: 32px;
+        margin-left: 1px;
+        margin-bottom: 1px;
 
     }
 
@@ -199,7 +149,6 @@ body.dark {
     height: 25px;
     width: 45px;
     transform: scale(1.2);
-    margin-right: 20px;
 
 }
 
@@ -213,7 +162,6 @@ body.dark {
     height: 20px;
     width: 19.5px;
     transform: translateX(0px);
-    transition: transform 0.2s linear;
 }
 
 .checkbox:checked+.label .ball {
@@ -234,7 +182,7 @@ body.dark {
     text-decoration:none ;
     margin-top: 9px;
     position: relative;
-        right: 20px;
+    margin-right: 20px;
 }
 
 #btnAumentar{
@@ -265,8 +213,6 @@ body.dark {
 }
 
 
-
-
 /* Ajuste conforme a altura da barra de navegação */
 
 main {
@@ -282,22 +228,85 @@ main {
     min-height: 100vh;
 }
 
+.about-footer {
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+
+}
+.about-footer img{
+    width: 150px;
+}
+.footer{
+    padding-top: 40px;
+}
+.social-midia-footer a {
+    margin-left: 20px;
+    color: white;
+}
+.social-midia-footer a:hover {
+    color: #862F35;
+}
+.info-footer a{
+ text-decoration: none;
+}
+.info-footer li{
+ list-style: none;
+}
+.footer h4{
+    text-transform: uppercase;
+}
+.info-footer li a {
+    color: white;
+}
+.info-footer ul li a {
+    transition: all 0.3s ease;
+}
+
+.info-footer li a:hover{
+    color: #862F35;
+    padding-left: 8px;
+}
+.info-footer ul li {
+    margin-left: 38% !important;
+    text-align: justify;
+}
+@media (max-width: 767.98px) { 
+    .info-footer ul li {
+        margin-left: 0 !important;
+    }
+    .info-footer ul h4 {
+        text-align: left;
+    }
+    .media{
+        margin-left: -30px;
+    }
+}
+@media (min-width: 768px) and (max-width: 1025px) { 
+    .info-footer ul h4 {
+        margin-left: 35%;
+    }
+ }
+ @media (min-width: 1025px) and (max-width: 1113px) { 
+    .info-footer ul h4 {
+        margin-left: 30%;
+    }
+ }
+ @media (min-width: 1113px) and (max-width: 1399px) { 
+    .info-footer ul h4 {
+        margin-left: 18%;
+    }
+ }
+ @media (min-width: 1400px) and (max-width: 1629px) { 
+    .info-footer ul h4 {
+        margin-left: 10%;
+    }
+ }
+
 /* Definição das cores do icone */
 
 .material-icons.md-17 { font-size: 17px; }
-.material-icons.md-24 { font-size: 24px; }
-.material-icons.md-36 { font-size: 36px; }
-.material-icons.md-48 { font-size: 48px; }
 
-/*coloca o texto dentro do footer para a esquerda*/
-.footer-block{
-    width: 30%; /* Define a largura do bloco */
-}
-
-/*Essa classe foi criada para colocar os conteudos dos bloco para o lado esquerdo menos o bloco da img*/
-.bloco_footer{
-    text-align: left;
-}
 
 /*muda a cor da ancora*/
 
@@ -305,19 +314,11 @@ main {
     color: white;
 }
 
-.bolinha{ 
-    list-style-type: disc; /*Ele adiciona as bolinhas de volta na li*/
-    margin-left: 18px; /*Cria uma distância do texto a borda esquerda*/
-}
 
 /*muda a cor da ancora quando o mouse passa por cima*/
 .endereco_cor:hover{
-    color: rgb(182, 178, 178);
-}
+    color: #862F35;
+    transition: all 0.3s ease;
 
-
-/*Da uma distanciada no elemento de cima*/
-.icon_insta_footer{
-    margin-top: 12p;
 }
 
